--- a/DishOCR/res/layout/capture.xml
+++ b/DishOCR/res/layout/capture.xml
@@ -178,7 +178,8 @@
     <TextView android:id="@+id/status_view_top"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"    
-              android:layout_alignParentTop="true"
+              android:layout_alignParentBottom="true"
+              android:layout_centerHorizontal="true"
               android:background="#0000"
               android:text=""
               android:textColor="@color/status_text"
@@ -199,7 +200,13 @@
               android:layout_marginTop="8dip"
               android:scaleType="center"
               android:visibility="gone" /> 
-     
+     <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:text="Back" />
+      
     <TextView android:id="@+id/status_view_bottom"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
