--- a/DishOCR/res/layout/capture.xml
+++ b/DishOCR/res/layout/capture.xml
@@ -47,10 +47,11 @@
   
   <ListView
 		android:id="@+id/restList"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:drawSelectorOnTop="false"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom"
+        />
 
   <LinearLayout android:id="@+id/result_view"
                 android:orientation="vertical"
@@ -186,9 +187,8 @@
 
     <TextView android:id="@+id/status_view_top"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content"    
-              android:layout_alignParentBottom="true"
-              android:layout_centerHorizontal="true"
+              android:layout_height="wrap_content"
+              android:layout_alignParentTop="true"
               android:background="#0000"
               android:text=""
               android:textColor="@color/status_text"
