--- a/DishOCR/res/layout/capture.xml
+++ b/DishOCR/res/layout/capture.xml
@@ -47,7 +47,7 @@
   
   <ListView
 		android:id="@+id/restList"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:drawSelectorOnTop="false"
         android:layout_gravity="bottom"
