--- a/DishOCR/res/layout/capture.xml
+++ b/DishOCR/res/layout/capture.xml
@@ -24,7 +24,7 @@
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"/>
    
-  <edu.sfsu.cs.orange.ocr.ViewfinderView
+  <com.dish.ocr.ViewfinderView
       android:id="@+id/viewfinder_view"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
@@ -196,7 +196,7 @@
               android:autoLink="web"
               android:clickable="true" />
  
-    <edu.sfsu.cs.orange.ocr.camera.ShutterButton
+    <com.dish.ocr.camera.ShutterButton
               android:id="@+id/shutter_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
